static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Montserrat:wght@100;200;300;400;500;600&display=swap');
html {
    font-size: 62.5%;
}

body {
    margin:0;
    padding:0;
    overflow-x: hidden;
    display: flex;
}

main.container-flex {
    display: flex;
    flex-direction: column;
}

.page-container {
    display:flex;
    flex-direction: column;
    min-height: 100vh;
}

.title-container {
    display: flex;
    width: 100vw;
    position: relative;
    margin-bottom: 2rem;
}

.page-title {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 8rem;
    white-space: nowrap;
    margin: 0 auto;
    color: rgba(137, 166, 251, .5);
}

h1,
h2,
h3,
h4,
h5,
h6,
.navbar-brand,
.copyright,
.nav-link {
    font-family: 'Montserrat', sans-serif;
}

p,
a {
    font-family: 'Libre Franklin', sans-serif;
    font-weight: 300;
}
.row {
    padding: 0;
}

nav.navbar {
    position: fixed;
    top:0;
    background-color: #89A6FB;
    height: 6rem;
    padding: 0;
    max-width: 100vw;
    width: 100%;
    box-shadow: 0 2px rgba(0, 0, 0, .3);
    z-index: 10;
}

div.collapse.navbar-collapse {
    justify-content: flex-end;
}

.navbar a.navbar-brand {
    position: absolute;
    font-size: 3rem;
    color: #ffffff;
    margin-left: 1rem;
}

button.navbar-toggler {
    position: absolute;
    right: 1rem;
    margin-right: 1rem;
}

.navbar li.nav-item a.nav-link {
    padding: .5rem 1rem;
    font-size: 2rem;
    color: #ffffff;
}

.navbar-nav {
    text-align: center;
    margin-top: 6rem;
    background-color: #89A6FB;
    box-shadow: 0 2px rgba(0, 0, 0, .3);
}

header {
    display: flex;
    height: 6rem;
}

main {
    padding-top: 2rem;
    display: flex;
    flex-grow: 1;
}

.main-container {
    display: flex;
    flex-direction: column;
    position: relative;
    max-width: 90vw;
    margin-left: auto;
    margin-right: auto;
}

footer {
    display: flex;
    flex-direction: column;
    color: #89A6FB;
    font-size: 1.8rem;
    align-items: center;
}

.social-container, .copyright {
    display: flex;
}

.copyright {
    padding: 1rem;
    margin: 0;
}

.social-container i {
    font-size: 2.4rem;
    padding: 1rem;
    color: #89A6FB;
}

/* Post Styling */
.post-details {
    padding: 1rem;
    margin:0;
    margin-top: -2rem;
}

.filter-options {
    width:100%;
    height: 6rem;
    display: flex;
    background-color: rgba(245, 244, 244, .5);
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
    flex-direction: row;
    margin-bottom: 4rem;
    margin-right: auto;
    margin-left: auto;
}

.filter-control {
    display: flex;
    padding: 1rem;
    margin: 0;
    margin-top: auto;
    margin-bottom: auto;
    font-size: 1.6rem;
    color: #7697F9;
}

.sidebar {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    width: 100%;
    padding: 0;
    height: 5.5rem;
    margin:0;
    max-width: 100%;
}

.post-card {
    margin-left: auto;
    margin-right: auto;
    border: 1px;
    max-width: 90vw;
    background-color: rgba(245, 244, 244, .5);
    min-height: 25rem;
    height: 25rem;
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
    margin-bottom: 5rem;
    padding: 0;
}

.post-title, .post-topic {
    font-size: 2.4rem;
}

.post-text, .post-author {
    font-size: 1.6rem;
}

.post-topic, .post-text,
.post-title {
    padding-top: .5rem;
}

.post-date {
    position: absolute;
    bottom: 1rem;
    font-size: 1.2rem;
    margin: 0;
}

.post-pluses {
    padding: 0;
    color: #ffffff;
    font-size: 1.4rem;
}

.sidebar i {
    padding: 0;
    color: #ffffff;
    font-size: 2.5rem;
}

.card-body.row {
    max-width:100%;
    padding: 0;
    margin: 0;
}

.post-comments, .post-votes  {
    text-align: center;
    margin: 0;
    padding: .5rem;
}

/* Topic Styling */
.all-sidebar {
    background-color: rgba(245, 244, 244, .6);
}

.sport {
    color: #0075F2;
}

.sport-sidebar {
    background-color: rgba(0, 117, 242, .6);
}

.entertainment {
    color: #78C3FB;
}

.entertainment-sidebar {
    background-color: rgba(120, 195, 251, .6);
}

.-news {
    color: #1B263B;
}

.news-sidebar {
    background-color: rgba(27, 38, 59, .6);
}

.general {
    color: #415A77;
}

.general-sidebar {
    background-color: rgba(65, 90, 119, .6);
}

.politics {
    color: #7697F9;
}

.politics-sidebar {
    background-color: rgba(118, 151, 249, .6);
}

.card-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
}


/* Login / Register Styling */

.login-container,
.register-container,
.login-form-side,
.register-form-side,
.login-end-panel,
.register-end-panel,
.login-form-main,
.register-form-main,
.login-form-main form,
.register-form-main form,
.alternate-link {
    justify-content: center;
    margin-left: auto;
    margin-right: auto;
    display: flex;
}

.login-container,
.register-container {
    min-height: 60rem;
    margin-top: 6rem;
    position: relative;
    width: 90vw;
    max-width: 60rem;
    flex-direction: column;
    justify-content: space-between;
}

.login-form-side,
.register-form-side {
    height: 10rem;
    border-radius: 4rem 4rem 0 0;
    color: #ffffff;
    background-color: #89A6FB;
    box-shadow: 0rem .1rem .4rem rgba(0, 0, 0, .25);
    width: 80%;
    z-index: 5;
    flex-direction: column;
}


.login-form-main form,
.register-form-main form {
    flex-direction: column;
}

.login-end-panel,
.register-end-panel {
    background-color: #89A6FB;
    width: 80%;
    height: 6rem;
    justify-content: center;
    z-index: 5;
    box-shadow: 0rem .1rem .4rem rgba(0, 0, 0, .25);
}

.page-heading {
    text-align: center;
    margin-top: auto;
    margin-bottom: auto;
    font-size: 3rem;
    letter-spacing: .2rem;
    font-weight: 500;
}

form.login-form,
form.registration-form {
    height: 100%;
    display: flex;
    margin: 0 auto;
    flex-direction: column;
    justify-content: space-between;
    width: 80%;
}

.login-form input,
.registration-form input {
    margin-top: .2rem;
    margin-bottom: 1rem;
    display: flex;
    font-size: 1.8rem;
    box-shadow: 0 2px rgba(185, 185, 185, 0.3);
}

.login-form label,
.registration-form label {
    font-size: 1.8rem;
    color: #89A6FB;
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
}

.login-form-main,
.register-form-main {
    padding-top: 4rem;
    padding-bottom : 2rem;
    width: 80%;
    min-height: 30rem;
    flex-direction: column;
    flex-grow: 1;
    background-color: rgba(211, 211, 211, .1);
    box-shadow: 0rem .1rem .4rem rgba(0, 0, 0, .25);
}

.login-form-side li,
.register-form-side li {
    font-size: 1.8rem;
    text-align: left;
    line-height: 3rem;
}
.register-end-panel {
    order: 3;
}

.register-form-main {
    order: 2;
}

.register-form-side {
    order: 1;
}

.login-submit {
    margin: 0 auto;
    background-color: rgba(7, 156, 131, .8);
    height: 4.5rem;
    width: 12rem;
    text-align: center;
    font-size: 1.8rem;
    color: #ffffff;
}

.sign-in-info {
    display: none;
}

.alternate-link-side {
    display: none;
}

.alternate-link {
    color: #ffffff;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.alternate-link h3, .alternate-link a {
    font-size: 1.8rem;
    line-height: 2rem;
    margin: auto;
    text-decoration: none;
    display: flex;
}

.alternate-link a {
    color: #ffffff;
    font-weight: 500;
    font-size: 2rem;
}

.form-title {
    text-align: center;
    display: flex;
    margin: 0 auto 2rem auto;
    font-size: 2.6rem;
    color: #89A6FB;
}

.input-container {
    display: flex;
    flex-direction: column;
}

/* Topic Styling */
.topic-card-container {
    margin-left: auto;
    margin-right: auto;
    display: flex;
    justify-content: center;
    width: 80vw;
}

.topic-card {
    display: flex;
    flex: 1 0 100%;
    justify-content: center;
    margin-bottom: 6rem;
}

.card-inner {
    display: flex;
    height: 100%;
    width: 25rem;
    flex-direction: column;
}

.topic-card-img {
    height: 100%;
    width: auto;
    bottom: 0;
    right: 0;
    position: absolute
}

.topic-card-body {
    height: 10rem;
    display: flex;
    justify-content: center;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.topic-card-title {
    display: flex;
    margin: auto 0;
    font-size: 2rem;
    color: #ffffff;
}

.card-img-container {
    height: 25vh;
    overflow: hidden;
    position: relative;
}

@media (min-width: 768px) {

    .topic-card {
        flex-basis: 50%;
    }

    .navbar li.nav-item a.nav-link {
        padding: 1rem;
    }

    .navbar-nav {
        margin: 0;
        box-shadow: none;
    }

    .sidebar {
        flex-direction: column;
        width: 7rem;
        padding: 1rem;
        justify-content: space-between;
        height: 100%;
    }

    .post-pluses {
        text-align: center;
        margin-bottom: 0;
    }

    .post-votes, .post-comments  {
        display: flex;
        padding: 0;
    }

    .post-comments {
        margin-bottom: 1rem;
    }

    .post-votes {
        margin-top: 1rem;
    }

    .sidebar i {
        margin-bottom: .5rem;
        text-align: center;
    }

    .post-details {
        padding: 0;
        margin-left: 1rem;
        margin-top: 0;
    }

    .post-card {
        max-width: 80vw;
        width: 80vw;
    }

    .filter-options {
        max-width: 80vw;
    }
    
    footer {
        flex-direction: row;
        width: 100vw;
        color: #89A6FB;
        font-size: 1.8rem;
        align-items: center;
        justify-content: center;
        line-height: 2rem;
    }

    .sign-in-info {
        display: flex;
    }

    .login-container,
    .register-container {
        flex-direction: row;
        min-height: 50rem;
    }

    .login-form-side,
    .register-form-side {
        padding: 3rem 2rem;
        min-height: 45rem;
        text-align: center;
        margin: 0 auto;
        justify-content: space-between;
    }

    .login-form-side {
        border-radius: 3rem 0 0 3rem;
        height: 100%;
    }

    .login-form-main {
        border-radius: 0 3rem 3rem 0;
    }
    
    .register-form-side {
        height: 100%;
        order: 2;
        border-radius: 0 3rem 3rem 0;
    }

    .register-form-main {
        border-radius: 3rem 0 0 3rem;
    }

    .page-heading {
        margin: 0;
        font-size: 3.6rem;
    }

    .login-end-panel,
    .register-end-panel{
        display: none;
    }
    
    .alternate-link-side {
        display: flex;
        flex-direction: column;
    }

    .alternate-link-side a {
        color: #ffffff;
        font-weight: 500;
        font-size: 2rem;
    }

    .alternate-link-side a,
    .alternate-link-side h3 {
        display: flex;
        margin: auto;
    }
}

@media (min-width: 1140px) {

    .main-container {
        margin: 0;
        max-width: 100vw;
        padding-left: 24rem;
    }

    .topic-card {
        flex-basis: 33.3333%;
    }

    .topic-card-container {
        max-width: 60vw;
    }

    .filter-options {
        max-width: 60vw;
    }

    .post-card {
        max-width: 60vw;
    }

    .title-container {
        width: 24rem;
        position: absolute;
        height: 100vh;
        margin-top: -8rem;
    }

    .page-title {
        font-family: 'Montserrat', sans-serif;
        font-weight: 400;
        position: absolute;
        font-size: 20rem;
        white-space: nowrap;
        margin: 0 auto;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-50%) rotate(-90deg);
        color: rgba(137, 166, 251, .5);
    }
}

@media (min-width: 2000px) {
    .card-container {
        flex-direction: row;
        justify-content: space-between;
    }

    .post-card {
        width: 100rem;
        max-width: 40vw;
    }
}

